--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "dcf-builder",
-  "private": true,
-  "packageManager": "pnpm@9.11.0",
-  "engines": {
-    "node": ">=20.0.0"
-  },
-  "scripts": {
-    "dev": "pnpm --filter @dcf-builder/web dev",
-    "build": "pnpm -r --if-present build",
-    "test": "pnpm -r --if-present test",
-    "lint": "pnpm -r --if-present lint",
-    "format": "pnpm -r --if-present format",
-    "typecheck": "pnpm -r --if-present typecheck",
-    "wasm:build": "pnpm --filter @dcf-builder/engine-wasm build"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.10.0",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^14.3.1",
-    "@testing-library/user-event": "^14.5.4",
-    "@types/node": "^20.14.10",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "eslint": "^9.10.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "globals": "^15.8.0",
-    "rimraf": "^5.0.5",
-    "tsup": "^8.1.0",
-    "typescript": "^5.5.4",
-    "vitest": "^1.6.0"
-  }
+    "name":  "dcf-builder",
+    "private":  true,
+    "packageManager":  "pnpm@9.11.0",
+    "engines":  {
+                    "node":  "\u003e=20.0.0"
+                },
+    "scripts":  {
+                    "dev":  "pnpm --filter @dcf-builder/web dev",
+                    "build":  "pnpm -r --if-present build",
+                    "test":  "pnpm -r --if-present test",
+                    "lint":  "pnpm -r --if-present lint",
+                    "format":  "pnpm -r --if-present format",
+                    "typecheck":  "pnpm -r --if-present typecheck",
+                    "wasm:build":  "pnpm --filter @dcf-builder/engine-wasm build"
+                },
+    "devDependencies":  {
+                            "@eslint/js":  "^9.10.0",
+                            "@testing-library/jest-dom":  "^6.5.0",
+                            "@testing-library/react":  "^14.3.1",
+                            "@testing-library/user-event":  "^14.5.4",
+                            "@types/node":  "^20.14.10",
+                            "@typescript-eslint/eslint-plugin":  "^8.11.0",
+                            "@typescript-eslint/parser":  "^8.11.0",
+                            "eslint":  "^9.10.0",
+                            "eslint-config-prettier":  "^9.1.0",
+                            "eslint-plugin-import":  "^2.29.1",
+                            "eslint-plugin-react":  "^7.35.0",
+                            "eslint-plugin-react-hooks":  "^5.0.0",
+                            "globals":  "^15.8.0",
+                            "rimraf":  "^5.0.5",
+                            "tsup":  "^8.1.0",
+                            "typescript":  "^5.5.4",
+                            "vitest":  "^1.6.0"
+                        }
 }
