--- a/crates/dcf/Cargo.toml
+++ b/crates/dcf/Cargo.toml
@@ -12,8 +12,9 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-wasm-bindgen = "0.2"
+wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 wasm-bindgen-futures = "0.4"
+serde-wasm-bindgen = "0.6"
 console_error_panic_hook = { version = "0.1", optional = true }
 thiserror = "1"
 
