Allow Vitest to pass with no tests in all packages
Update the test scripts in all package.json files to use the --passWithNoTests flag with Vitest. This ensures that the test command succeeds even if no test files are found, improving CI reliability and developer experience.

--- a/packages/engine-loader/package.json
+++ b/packages/engine-loader/package.json
@@ -27,6 +27,6 @@
     "lint": "eslint \"src/**/*.ts\"",
     "format": "pnpm lint -- --fix",
     "typecheck": "tsc --noEmit",
-    "test": "vitest run"
+    "test": "vitest run --passWithNoTests"
   }
 }
