--- a/packages/engine-contract/package.json
+++ b/packages/engine-contract/package.json
@@ -22,6 +22,6 @@
     "lint": "eslint \"src/**/*.ts\"",
     "format": "pnpm lint -- --fix",
     "typecheck": "tsc --noEmit",
-    "test": "vitest run"
+    "test": "vitest run --passWithNoTests"
   }
 }
