--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,45 +1,48 @@
-{
-  "name": "@dcf-builder/web",
-  "version": "0.1.0",
-  "description": "DCF Model Builder web application",
-  "license": "MIT",
-  "type": "module",
-  "private": true,
-  "scripts": {
-    "dev": "vite",
-    "build": "pnpm run typecheck && vite build",
-    "preview": "vite preview",
-    "test": "vitest run --passWithNoTests --environment node",
-    "test:watch": "vitest",
-    "lint": "eslint src --ext ts,tsx",
-    "format": "pnpm lint -- --fix",
-    "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {
-    "@dcf-builder/engine-contract": "workspace:^",
-    "@dcf-builder/engine-loader": "workspace:^",
-    "@headlessui/react": "^2.1.5",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.2.12",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "recharts": "^2.10.3"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^14.3.1",
-    "@testing-library/user-event": "^14.5.4",
-    "@types/node": "^20.14.10",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.7.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.3",
-    "vite-plugin-top-level-await": "^1.3.1",
-    "vite-plugin-wasm": "^3.3.0",
-    "vitest": "^1.6.0"
-  }
+﻿{
+    "name":  "@dcf-builder/web",
+    "version":  "0.1.0",
+    "description":  "DCF Model Builder web application",
+    "license":  "MIT",
+    "type":  "module",
+    "private":  true,
+    "scripts":  {
+                    "dev":  "vite",
+                    "build":  "pnpm run typecheck \u0026\u0026 vite build",
+                    "preview":  "vite preview",
+                    "test":  "vitest run --coverage --passWithNoTests --environment node",
+                    "test:watch":  "vitest",
+                    "lint":  "eslint src --ext ts,tsx",
+                    "format":  "pnpm lint -- --fix",
+                    "typecheck":  "tsc --noEmit"
+                },
+    "dependencies":  {
+                         "@dcf-builder/engine-contract":  "workspace:^",
+                         "@dcf-builder/engine-loader":  "workspace:^",
+                         "@headlessui/react":  "^2.1.5",
+                         "clsx":  "^2.1.1",
+                         "framer-motion":  "^11.2.12",
+                         "papaparse":  "^5.5.3",
+                         "react":  "^18.3.1",
+                         "react-dom":  "^18.3.1",
+                         "recharts":  "^2.10.3",
+                         "parquet-wasm":  "^0.5.0"
+                     },
+    "devDependencies":  {
+                            "@testing-library/jest-dom":  "^6.5.0",
+                            "@testing-library/react":  "^14.3.1",
+                            "@testing-library/user-event":  "^14.5.4",
+                            "@types/node":  "^20.14.10",
+                            "@types/papaparse":  "^5.3.16",
+                            "@types/react":  "^18.3.5",
+                            "@types/react-dom":  "^18.3.0",
+                            "@vitejs/plugin-react-swc":  "^3.7.0",
+                            "autoprefixer":  "^10.4.20",
+                            "postcss":  "^8.4.41",
+                            "tailwindcss":  "^3.4.13",
+                            "typescript":  "^5.5.4",
+                            "vite":  "^5.4.3",
+                            "vite-plugin-top-level-await":  "^1.3.1",
+                            "vite-plugin-wasm":  "^3.3.0",
+                            "vitest":  "^1.6.0"
+                        }
 }
