--- a/packages/engine-wasm/package.json
+++ b/packages/engine-wasm/package.json
@@ -1,39 +1,39 @@
-{
-  "name": "@dcf-builder/engine-wasm",
-  "version": "0.1.0",
-  "description": "WebAssembly-backed DCF valuation engine",
-  "license": "MIT",
-  "type": "module",
-  "sideEffects": false,
-  "files": [
-    "dist",
-    "pkg"
-  ],
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "default": "./dist/index.js"
-    },
-    "./pkg/*": "./pkg/*"
-  },
-  "dependencies": {
-    "@dcf-builder/engine-contract": "workspace:^"
-  },
-  "scripts": {
-    "clean": "rimraf dist pkg",
-    "build:wasm": "powershell -NoProfile -ExecutionPolicy Bypass -Command \"node ./scripts/run-wasm-pack.mjs build ../../crates/dcf --target web --out-dir ../../packages/engine-wasm/pkg --out-name dcf\"",
-    "build": "pnpm run clean && pnpm run build:wasm && tsup src/index.ts --format esm,cjs --dts --sourcemap --external ../pkg/dcf.js",
-    "lint": "eslint \"src/**/*.ts\"",
-    "format": "pnpm lint -- --fix",
-    "typecheck": "tsc --noEmit",
-    "test": "vitest run --passWithNoTests"
-  },
-  "devDependencies": {
-    "wasm-pack": "^0.13.0"
-  }
+﻿{
+    "name":  "@dcf-builder/engine-wasm",
+    "version":  "0.1.0",
+    "description":  "WebAssembly-backed DCF valuation engine",
+    "license":  "MIT",
+    "type":  "module",
+    "sideEffects":  false,
+    "files":  [
+                  "dist",
+                  "pkg"
+              ],
+    "main":  "dist/index.cjs",
+    "module":  "dist/index.js",
+    "types":  "dist/index.d.ts",
+    "exports":  {
+                    ".":  {
+                              "types":  "./dist/index.d.ts",
+                              "import":  "./dist/index.js",
+                              "require":  "./dist/index.cjs",
+                              "default":  "./dist/index.js"
+                          },
+                    "./pkg/*":  "./pkg/*"
+                },
+    "dependencies":  {
+                         "@dcf-builder/engine-contract":  "workspace:^"
+                     },
+    "scripts":  {
+                    "clean":  "rimraf dist pkg",
+                    "build:wasm":  "node ./scripts/run-wasm-pack.mjs build ../../crates/dcf --target web --out-dir ../../packages/engine-wasm/pkg --out-name dcf",
+                    "build":  "pnpm run clean \u0026\u0026 pnpm run build:wasm \u0026\u0026 tsup src/index.ts --format esm,cjs --dts --sourcemap --external ../pkg/dcf.js",
+                    "lint":  "eslint \"src/**/*.ts\"",
+                    "format":  "pnpm lint -- --fix",
+                    "typecheck":  "tsc --noEmit",
+                    "test":  "vitest run --passWithNoTests"
+                },
+    "devDependencies":  {
+                            "wasm-pack":  "^0.13.0"
+                        }
 }
