Update CI workflow and Vitest config for web app
Adds build steps for @dcf-builder/engine-ts and @dcf-builder/engine-loader in the CI workflow. Removes coverage from the web app's test script and adds a path alias for '@' in vitest.config.ts. Minor formatting fixes in package.json files.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
 
       - run: pnpm install --no-frozen-lockfile
       - run: pnpm wasm:build
+      - run: pnpm --filter @dcf-builder/engine-ts build
+      - run: pnpm --filter @dcf-builder/engine-loader build
       - run: pnpm test
 
       - uses: actions/setup-python@v5
