Add build step and path aliases for engine packages
Added a build step for @dcf-builder/engine-contract in the CI workflow. Updated vitest config to define path aliases for engine packages, improving module resolution during testing.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
           node-version: 20
 
       - run: pnpm install --no-frozen-lockfile
+      - run: pnpm --filter @dcf-builder/engine-contract build
       - run: pnpm wasm:build
       - run: pnpm --filter @dcf-builder/engine-ts build
       - run: pnpm --filter @dcf-builder/engine-loader build
