--- a/packages/engine-wasm/tsconfig.json
+++ b/packages/engine-wasm/tsconfig.json
@@ -8,8 +8,17 @@
     "declarationDir": "dist",
     "sourceMap": true,
     "resolveJsonModule": true,
-    "lib": ["ES2021", "DOM"]
+    "lib": [
+      "ES2021",
+      "DOM"
+    ]
   },
-  "include": ["src/**/*"],
-  "exclude": ["dist", "node_modules"]
+  "include": [
+    "src/**/*",
+    "pkg/*.d.ts"
+  ],
+  "exclude": [
+    "dist",
+    "node_modules"
+  ]
 }
